package org.example.sample6.model;


import lombok.Data;
import lombok.*;

@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Sample6Domain1 {
    private java.lang.String id;
    private java.lang.String v1;
}
