package org.example.sample6.model;


import lombok.Data;
import lombok.*;

@Data
@NoArgsConstructor
@AllArgsConstructor
@Builder
public class Sample6Dto {
    private java.lang.String id;
    private java.lang.String v1;
    private java.lang.String v2;
    private java.lang.String v3;
}
